--- a/index.html
+++ b/index.html
@@ -29,9 +29,100 @@
 
 	<div class="container">
 		<div class="tab-content" id="pills-tabContent">
+			<!-- Modal -->
+<div class="modal fade" id="modalP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">O que deseja fazer com esse pedido?</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn adicionar">Iniciar</button>
+        <button type="button" class="btn editar">Editar</button>
+        <button type="button" class="btn deletar">Deletar</button>
+      </div>
+      <!--div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div-->
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modalE" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">O que deseja fazer com esse pedido?</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn adicionar">Terminar</button>
+        <button type="button" class="btn editar">Editar</button>
+        <button type="button" class="btn deletar">Deletar</button>
+      </div>
+      <!--div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div-->
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modalADC" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Insira os dados do pedido</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body modalADC">
+      	<form class="needs-validation" novalidate>
+  <div class="form-row">
+    <div class="col-md-8">
+      <label for="validationCustom01">Nome do cliente</label>
+      <input type="text" class="form-control" id="validationCustom01" placeholder="Nome do cliente" required>
+      <div class="invalid-feedback">
+        Por favor, insira o nome do cliente.
+      </div>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-8">
+      <label for="validationCustom04">Roupa</label>
+      <select class="custom-select" id="validationCustom04" required>
+        <option selected disabled value="">Escolha</option>
+        <option>Camiseta</option>
+        <option>Calça</option>
+        <option>Short</option>
+        <option>Casaco</option>
+      </select>
+      <div class="invalid-feedback">
+        Por favor, selecione uma peça de roupa.
+      </div>
+    </div>
+  </div>
+  <button type="button" class="btn deletar" data-dismiss="modal">Cancelar</button>
+  <button type="submit" class="btn adicionar">Adicionar</button>
+</form>
+      </div>
+      <!--div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div-->
+    </div>
+  </div>
+</div>
 			<div class="pedidos tab-pane fade show active" id="pills-pedidos" role="tabpanel" aria-labelledby="pills-pedidos-tab">
 				<div class="config" id="config">
-					<button class="btn adicionar"><i class="far fa-plus-square"></i>Adicionar</button>
+					<button class="btn adicionar" data-toggle="modal" data-target="#modalADC"><i class="far fa-plus-square"></i>Adicionar</button>
 					<!--button class="btn editar"><i class="far fa-edit"></i>Editar</button-->
 					<button class="btn deletar" onclick="odel()"><i class="far fa-trash-alt"></i>Deletar</button>
 				</div>
@@ -40,30 +131,91 @@
 					<button class="btn deletar"><i class="far fa-check-circle"></i>Confirmar</button>
 				</div>
 				<div class="row">
-					<div class="col-sm" style="border-right: 0.5px solid gray;">
+					<div class="col-sm view">
 						<h3>Pendentes</h3>
 						<div class="item">
-							<input type="checkbox" name="" class="check">
-							<p aria-label="✓" class="aria">Ana - Camiseta</p>
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalP">
+							  Ana - Camiseta
+							</button>
 						</div>
 						<div class="item">
-							<input type="checkbox" name="" class="check">
-							<p aria-label="✓" class="aria">Maria - Blusa</p>
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalP">
+							  Maria - Blusa
+							</button>
 						</div>
 						<div class="item">
-							<input type="checkbox" name="" class="check">
-							<p aria-label="✓" class="aria">José - Camisa</p>
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalP">
+							  José - Camisa
+							</button>
 						</div>
 						<div class="item">
-							<input type="checkbox" name="" class="check">
-							<p aria-label="✓" class="aria">Dora - Blusa</p>
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalP">
+							  Dora - Blusa
+							</button>
 						</div>
 					</div>
-					<div class="col-sm" style="border-right: 0.5px solid gray;">
+					<div class="col-sm select">
+						<h3>Pendentes</h3>
+						<div class="item">
+							<input class="check" type="checkbox" id="todo1" name="todo1" value="todo1">
+							<label for="todo1" data-content="Ana - Camiseta" class="laria">Ana - Camiseta</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="todo2" name="todo2" value="todo2">
+							<label for="todo2" data-content="Maria - Blusa" class="laria">Maria - Blusa</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="todo3" name="todo3" value="todo3">
+							<label for="todo3" data-content="José - Camisa" class="laria">José - Camisa</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="todo4" name="todo4" value="todo4">
+							<label for="todo4" data-content="Dora - Blusa" class="laria">Dora - Blusa</label>
+						</div>
+					</div>
+					<div class="col-sm" style="border-right: 1px solid gray; border-left: 1px solid gray;">
+						<div class="col-sm view">
 						<h3>Em Andamento</h3>
-						<p aria-label="✓">Seu Jão - Calça</p>
-						<p aria-label="✓">Nicolas - Casaco</p>
-						<p aria-label="✓">Matheus - Casaco</p>
+						<div class="item">
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalE">
+							  Maria - Saia
+							</button>
+						</div>
+						<div class="item">
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalE">
+							  Júlia - Calça
+							</button>
+						</div>
+						<div class="item">
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalE">
+							  Luís - Casaco
+							</button>
+						</div>
+						<div class="item">
+							<button  aria-label="✓" type="button" class="btn aria" data-toggle="modal" data-target="#modalE">
+							  Antônio - Camisa
+							</button>
+						</div>
+					</div>
+					<div class="col-sm select">
+						<h3>Em Andamento</h3>
+						<div class="item">
+							<input class="check" type="checkbox" id="podo1" name="podo1" value="podo1">
+							<label for="podo1" data-content="Maria - Saia" class="laria">Maria - Saia</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="podo2" name="podo2" value="podo2">
+							<label for="podo2" data-content="Júlia - Calça" class="laria">Júlia - Calça</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="podo3" name="podo3" value="podo3">
+							<label for="podo3" data-content="Luís - Casaco" class="laria">Luís - Casaco</label>
+						</div>
+						<div class="item">
+							<input class="check" type="checkbox" id="podo4" name="podo4" value="podo4">
+							<label for="podo4" data-content="Antônio - Camisa" class="laria">Antônio - Camisa</label>
+						</div>
+					</div>
 					</div>
 					<div class="col-sm">
 						<h3>Finalizados</h3>
@@ -104,29 +256,6 @@
 
 	<script src="include/bootstrap/js/jquery-3.4.1.slim.min.js"></script>
 	<script src="include/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-		function change_dark() {
-			var include = document.getElementById("theme");
-			include.href = "cascata_dark_mode.css";
-		}
-		function change_light() {
-			var include = document.getElementById("theme");
-			include.href = "cascata_light_mode.css";
-		}
-		function odel(){
-			var bdel = document.getElementById("bdel");
-			var config = document.getElementById("config")
-			config.style = "display: none;";
-			bdel.style = "display: block;";
-			var check = document.getElementsByClassName("check");
-			check.style = "display: block;";
-		}
-		function cdel(){
-			var bdel = document.getElementById("bdel");
-			var config = document.getElementById("config")
-			config.style = "display: block;";
-			bdel.style = "display: none;";
-		}
-	</script>
+	<script src="roteiro.js"></script>
 </body>
 </html>
